apiexample/deploymentV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiexample-ui-v2
  labels:
    app: apiexample-ui
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiexample-ui
      version: v2
  template:
    metadata:
      labels:
        app: apiexample-ui
        version: v2
    spec:
      containers:
      # replace the repository URL with your own repository (e.g. {DockerID}/http-db-service:0.0.x for Docker Hub).
      - image: jcawley5/nodejs-api-example
        imagePullPolicy: Always
        name: apiexample-ui
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/config.json
          subPath: config.json
      volumes:
      - name: config-volume
        configMap:
          name: apiexample-config-v2
