apiexample/deploymentMongoDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiexample-db
  labels:
    app: apiexample-db
spec:
  selector:
    matchLabels:
      app: apiexample-db
  template:
    metadata:
      labels:
        app: apiexample-db
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: apiexample-db
        image: mongo
        ports:
        - name: mongodbport
          containerPort: 27017
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongodata
      volumes:
      - name: mongodata
        persistentVolumeClaim:
          claimName: mongodata
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: apiexample-db-service
#   labels:
#     app: apiexample-db
# spec:
#   ports:
#   - name: tcp
#     port: 27017
#     protocol: TCP
#   selector:
#     app: apiexample-db
---
kind: Service
apiVersion: v1
metadata:
  name: db-gateway
  labels:
    app: db-gateway
spec:
  type: LoadBalancer
  selector:
    app: apiexample-db
  ports:
    - protocol: TCP
      port: 27217
      targetPort: 27017
